# communities

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: update_bids_vocab_file.yaml  update_enigma_assessments.yaml  update_namespaces.yaml  update_term_vocab_files.yaml
Neurobagel/: assessment.json  assessmentTerms.json  config.json  diagnosis.json  diagnosisTerms.json  sex.json  sexTerms.json  subjectgroup.json
code/: conftest.py  create_config_namespace_map.py  create_enigma_terms_json.py  create_imaging_vocab_from_bids_schema.py  create_term_vocab_from_gsheet.py  test_create_term_vocab_from_gsheet.py
config_metadata/: config_namespace_map.json
configs/: assessment.json
configs/ENIGMA-PD/: assessment.json  community_terms_manifest.json  config.json  diagnosis.json
configs/NEURO-AD/: assessment.json  community_terms_manifest.json
configs/NICHY/: assessment.json  community_terms_manifest.json
configs/Neurobagel/: assessment.json  config.json  diagnosis.json  imaging_modalities.json  sex.json
configs/SCAND/: assessment.json  community_terms_manifest.json
